--- a/backend/package.json
+++ b/backend/package.json
@@ -3,20 +3,29 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@paypal/checkout-server-sdk": "^1.0.3",
+    "audit": "^0.0.6",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.12.2",
     "multer": "^1.4.5-lts.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
+    "pdf": "^0.1.0",
     "pdfkit": "^0.16.0",
     "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.1.9"
   }
 }
