--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,45 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "react-scripts": "^5.0.1"
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@paypal/react-paypal-js": "^8.8.2",
+    "@react-google-maps/api": "^2.20.6",
+    "@shadcn/ui": "^0.0.4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
+    "axios": "^1.8.4",
+    "framer-motion": "^12.5.0",
+    "moment": "^2.30.1",
+    "react": "^18.3.1",
+    "react-datepicker": "^4.20.0",
+    "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
+    "react-masonry-css": "^1.0.16",
+    "react-router-dom": "^7.4.0",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
+    "web-vitals": "^4.2.4"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
